vm/src/snapshots/vm__test__stack_snapshot_tests@spawn__spawn_and_cancel.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/spawn/spawn_and_cancel.tapir
---
[
  FrameResult(
    active_states: 2,
    int_prop: 100,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 100,
  ),
  FrameResult(
    active_states: 0,
    int_prop: 999,
  ),
]
