vm/src/snapshots/vm__test__stack_snapshot_tests@spawn__spawn_conditional_wait.tapir.snap
---
source: vm/src/lib.rs
expression: stack_at_waits
input_file: vm/src/snapshot_tests/stack/spawn/spawn_conditional_wait.tapir
---
[
  ([
    [
      -1,
      0,
      7,
      2,
      1,
      0,
      0,
      7,
    ],
    [
      -1,
      1,
      2,
    ],
    [
      -1,
      0,
      7,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([
    [
      -1,
      0,
      7,
      2,
      1,
      0,
      0,
      7,
    ],
    [
      -1,
      1,
      2,
    ],
    [
      -1,
      0,
      7,
    ],
  ], PropObj(
    int_prop: 7,
  )),
  ([
    [
      -1,
      0,
      7,
      2,
      1,
      0,
      0,
      7,
    ],
    [
      -1,
      1,
      2,
    ],
  ], PropObj(
    int_prop: 2,
  )),
  ([], PropObj(
    int_prop: 4,
  )),
]
